# CurricularAnalyticsDiff.py

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg
src/curricularanalyticsdiff/: Diff.py  HelperFns.py  WhatIfInstitutional.py  Whatif.py  WhatifInstitutional.py  __init__.py
tests/: DiffTest.py  HelperFnsTests.py  WII_tests2.py  WhatIfInstitutionalTests.py  WhatIfTests.py
